--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,12 @@
             "email": "yewenlin@zto.com"
         }
     ],
+    "autoload": { 
+        "files": [  
+        ],
+        "psr-4": {
+            "zop\\": "./zop/"
+        }
+    },
     "require": {}
 }
